src/test/ui/feature-gate-target_feature.stderr
error[E0658]: the `#[target_feature]` attribute is an experimental feature
  --> $DIR/feature-gate-target_feature.rs:11:1
   |
LL | #[target_feature = "+sse2"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(target_feature)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
